k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
     labels:
       app: api
    spec:
      containers:
        - image: europe-central2-docker.pkg.dev/neon-essence-368418/real-time-chat/gochat-api:01
          name: api
          ports:
            - containerPort: 8080
